--- a/BackFacture.csproj
+++ b/BackFacture.csproj
@@ -12,12 +12,13 @@
     <NoWarn>$(NoWarn);CS8625</NoWarn>
     <NoWarn>$(NoWarn);CS8618</NoWarn>
     <NoWarn>$(NoWarn);CS8602</NoWarn>
-    
+    <NoWarn>$(NoWarn);SYSLIB0014</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlcipher" Version="2.1.8" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 </Project>
